--- a/package.json
+++ b/package.json
@@ -3,28 +3,32 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
-      "next": "14.2.5",
-      "react": "18.3.1",
-      "react-dom": "18.3.1",
-      "@supabase/supabase-js": "^2.45.0",
-      "@supabase/ssr": "^0.4.0",
-      "@google/generative-ai": "^0.16.0"
+        "@google/generative-ai": "^0.16.0",
+        "@supabase/ssr": "^0.4.0",
+        "@supabase/supabase-js": "^2.45.0",
+        "lodash": "^4.17.21",
+        "lucide-react": "^0.536.0",
+        "next": "14.2.5",
+        "react": "18.3.1",
+        "react-dom": "18.3.1",
+        "react-intersection-observer": "^9.16.0"
     },
     "devDependencies": {
-      "@types/node": "^20.14.10",
-      "@types/react": "^18.3.3",
-      "@types/react-dom": "^18.3.0",
-      "typescript": "^5.5.3",
-      "tailwindcss": "^3.4.6",
-      "postcss": "^8.4.39",
-      "autoprefixer": "^10.4.19",
-      "eslint": "^8.57.0",
-      "eslint-config-next": "14.2.5"
+        "@types/lodash": "^4.17.20",
+        "@types/node": "^20.14.10",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "autoprefixer": "^10.4.19",
+        "eslint": "^8.57.0",
+        "eslint-config-next": "14.2.5",
+        "postcss": "^8.4.39",
+        "tailwindcss": "^3.4.6",
+        "typescript": "^5.5.3"
     }
-  }
+}
