--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ GEMINI_API_KEY=your_gemini_api_key
 
 # Application URL
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Error Tracking (Optional - for production monitoring)
+NEXT_PUBLIC_SENTRY_DSN=your_sentry_dsn_here
+SENTRY_ORG=your_sentry_org_slug
+SENTRY_PROJECT=your_sentry_project_slug
