--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     },
     "dependencies": {
         "@google/generative-ai": "^0.16.0",
-        "@supabase/ssr": "^0.4.0",
+        "@sentry/nextjs": "^10.3.0",
+        "@supabase/ssr": "^0.6.1",
         "@supabase/supabase-js": "^2.45.0",
         "lodash": "^4.17.21",
         "lucide-react": "^0.536.0",
-        "next": "14.2.5",
+        "next": "^14.2.31",
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-intersection-observer": "^9.16.0"
