10th Aug commit

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,69 @@
+# AutoTrader.lk Environment Configuration
+# Copy this file to .env.local for development or set these variables in your hosting platform
+
 # Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+
+# Database Configuration (if using direct PostgreSQL)
+DATABASE_URL="postgresql://username:password@localhost:5432/autotrader_db"
+
+# Cron Job Security
+# Generate a secure random string for cron job authentication
+# Example: openssl rand -base64 32
+CRON_SECRET="your-secure-random-string-for-cron-authentication"
+
+# Payment Integration
+# Stripe Configuration
+STRIPE_PUBLIC_KEY="pk_test_your_stripe_public_key"
+STRIPE_SECRET_KEY="sk_test_your_stripe_secret_key"
+STRIPE_WEBHOOK_SECRET="whsec_your_stripe_webhook_secret"
+
+# PayHere Configuration (Sri Lankan Payment Gateway)
+PAYHERE_MERCHANT_ID="your_payhere_merchant_id"
+PAYHERE_MERCHANT_SECRET="your_payhere_merchant_secret"
+PAYHERE_CURRENCY="LKR"
+
+# Email Configuration
+# For sending promotion confirmations and notifications
+EMAIL_FROM="noreply@autotrader.lk"
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT="587"
+SMTP_USER="your-email@gmail.com"
+SMTP_PASSWORD="your-app-password"
 
 # Google AI (Gemini) API
 GEMINI_API_KEY=your_gemini_api_key
 
+# File Upload Configuration
+# For image uploads (if using external storage)
+CLOUDINARY_CLOUD_NAME="your-cloudinary-cloud-name"
+CLOUDINARY_API_KEY="your-cloudinary-api-key"
+CLOUDINARY_API_SECRET="your-cloudinary-api-secret"
+
 # Application URL
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_NAME="AutoTrader.lk"
+
+# Feature Flags
+ENABLE_PROMOTIONS="true"
+ENABLE_ROTATION_SYSTEM="true"
+ENABLE_PAYMENT_PROCESSING="true"
+
+# Promotion Configuration (Optional - can be set in code)
+FEATURED_SLOTS="2"
+TOP_SPOT_SLOTS="2"
+ROTATION_INTERVAL_HOURS="1"
+BOOST_RESET_HOUR="0"
 
 # Error Tracking (Optional - for production monitoring)
 NEXT_PUBLIC_SENTRY_DSN=your_sentry_dsn_here
 SENTRY_ORG=your_sentry_org_slug
 SENTRY_PROJECT=your_sentry_project_slug
+
+# Security
+JWT_SECRET="your-jwt-secret-for-auth"
+
+# Monitoring URLs (for health checks)
+HEALTH_CHECK_TOKEN="your-health-check-token"
