--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@google/generative-ai": "^0.16.0",
         "@sentry/nextjs": "^10.3.0",
+        "@supabase/auth-helpers-nextjs": "^0.10.0",
         "@supabase/ssr": "^0.6.1",
         "@supabase/supabase-js": "^2.45.0",
         "lodash": "^4.17.21",
